# mksingh

./: README.md  main.py  packages.txt  pyproject.toml  requirements.txt
attached_assets/: MW-SECURITIES-IN-F&O-28-Feb-2025.csv
styles/: custom.css
utils/: ml_sentiment_analyzer.py  news_fetcher.py  sentiment_analyzer.py
