[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gnews>=0.4.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pytz>=2025.1",
    "streamlit>=1.42.2",
    "torch>=2.6.0",
    "trafilatura>=2.0.0",
    "transformers>=4.49.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
